# UprightNet

./: .gitignore  README.md  pyproject.toml  test.py  train.py  uprightnet_wrapper.py
checkpoints/test_local/: add_pretrained_weights_here.txt
data/: image_folder.py
models/: networks.py  uprightnet_model.py
notebooks/: UprightNet_Inference.ipynb
uprightnet/: __init__.py  test.py  train.py  uprightnet_wrapper.py
uprightnet/data/: data_loader.py  dataset_loader.py  image_folder.py
uprightnet/models/: models_resnet.py  networks.py  uprightnet_model.py
uprightnet/options/: __init__.py  base_options.py  test_options.py
util/: config.py  create_train_val_test_scannet_normal_list.py
