[tool.poetry]
name = "uprightnet"
version = "0.1.0"
description = ""
authors = ["Dima Kagan <dimakagan15@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.1"
opencv-contrib-python = "4.7.0.72"
scikit-image = "0.19.3"
scipy = "1.10.1"
numpy = "1.22.4"
matplotlib = "3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
